[package]
name = "clip"
version = "0.1.1"
authors = ["adam-mcdaniel <adam.mcdanie17@gmail.com>"]
edition = "2018"
description = "A command line parser that doesn't use std or alloc!"
license = "Apache-2.0"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="clip"
path="src/bin.rs"


[dependencies]

